--- a/app/src/main/res/layout/activity_user_page.xml
+++ b/app/src/main/res/layout/activity_user_page.xml
@@ -49,6 +49,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.656"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/dec_satelite"
-        tools:layout_editor_absoluteY="74dp" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/dec_satelite" />
 </androidx.constraintlayout.widget.ConstraintLayout>
