--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -23,8 +23,8 @@
         app:layout_constraintVertical_bias="0.079" />
 
     <LinearLayout
-        android:layout_width="317dp"
-        android:layout_height="375dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="28dp"
         android:background="@drawable/divs"
         android:alpha="0.98"
@@ -44,6 +44,7 @@
             android:textSize="35dp"/>
 
         <TextView
+            android:id="@+id/resultadoSom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Audio:"
@@ -54,8 +55,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_marginBottom="50dp">
+            android:layout_marginBottom="50dp"
+            android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView8"
@@ -64,12 +65,15 @@
                 app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />
 
             <SeekBar
-                android:id="@+id/seekBar7"
+                android:id="@+id/brAsom"
                 android:layout_width="251dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:max="100"
+                android:progress="50"/>
         </LinearLayout>
 
         <TextView
+            android:id="@+id/resultadoText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
@@ -94,28 +98,36 @@
             <SeekBar
                 android:id="@+id/brTfonte"
                 android:layout_width="251dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:max="25"/>
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:gravity="center_horizontal">
 
             <Button
                 android:id="@+id/btnVoltar"
-                android:layout_width="125dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
-                android:text="Voltar" />
+                android:minHeight="48dp"
+                android:text="Voltar"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <Button
                 android:id="@+id/BtnConfirmar"
-                android:layout_width="125dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="10sp"
                 android:text="Confirmar" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
 
         </LinearLayout>
 
@@ -126,8 +138,10 @@
         android:layout_width="96dp"
         android:layout_height="99dp"
         android:background="@drawable/icone_astronalta_foguete"
-        tools:layout_editor_absoluteX="299dp"
-        tools:layout_editor_absoluteY="542dp" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="562dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
