--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -98,7 +98,8 @@
             <SeekBar
                 android:id="@+id/brTfonte"
                 android:layout_width="251dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                />
 
         </LinearLayout>
 
