--- a/app/src/main/res/layout/activity_config.xml
+++ b/app/src/main/res/layout/activity_config.xml
@@ -28,7 +28,6 @@
         android:layout_marginTop="28dp"
         android:background="@drawable/divs"
         android:alpha="0.98"
-
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,7 +40,7 @@
             android:text="Configurações"
             android:textAlignment="center"
             android:textColor="#FFBF00"
-            android:textSize="35dp"/>
+            android:autoSizeMinTextSize = "32dp"/>
 
         <TextView
             android:id="@+id/resultadoSom"
@@ -110,16 +109,21 @@
 
             <Button
                 android:id="@+id/btnVoltar"
-                android:layout_width="125dp"
+                android:layout_width="wrap_content"
+                android:minWidth="120dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="10sp"
-                android:text="Voltar" />
+                android:text="Voltar"
+                android:padding="2dp"/>
 
             <Button
                 android:id="@+id/BtnConfirmar"
                 android:layout_width="wrap_content"
+                android:minWidth="120dp"
                 android:layout_height="wrap_content"
-                android:text="Confirmar" />
+                android:layout_margin="10sp"
+                android:text="Confirmar"
+                android:padding="2dp"/>
         </LinearLayout>
 
         <LinearLayout
