--- a/app/src/main/res/layout/activity_tela_jogos.xml
+++ b/app/src/main/res/layout/activity_tela_jogos.xml
@@ -24,7 +24,7 @@
         android:id="@+id/footer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/img"
+        android:background="@drawable/azul"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -34,8 +34,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:backgroundTint="@color/amarelo"
             android:minWidth="150dp"
             android:text="Voltar"
+            android:textColor="@color/black"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="MissingConstraints" />
 
@@ -45,8 +47,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="95dp"
             android:layout_marginEnd="16dp"
+            android:backgroundTint="@color/amarelo"
             android:minWidth="150dp"
             android:text="Pause"
+            android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnVoltar"
