--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="147dp"
-        android:layout_height="182dp"
+        android:layout_height="150dp"
         android:background="@drawable/icone_astronalta_foguete"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,23 +59,28 @@
 
     <Button
         android:id="@+id/btnLog"
-        android:layout_width="250dp"
-        android:layout_height="50dp"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="50dp"
+        android:layout_marginEnd="25dp"
+        android:backgroundTint="@color/amarelo"
         android:text="Login"
+        android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.639"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/edtSenha" />
 
     <Button
         android:id="@+id/btnCad"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="25dp"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="25dp"
+        android:backgroundTint="@color/amarelo"
+        android:textColor="@color/black"
         android:text="Cadastrar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -86,10 +91,10 @@
         android:id="@+id/btnVL"
         android:layout_width="47dp"
         android:layout_height="43dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:background="@android:drawable/ic_delete"
-        app:layout_constraintEnd_toStartOf="@+id/btnCad"
-        app:layout_constraintHorizontal_bias="0.33"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCad" />
 
