Acho que nem importa mais oque eu escrevo Arrumei a visualização dos planetas e troquei uma imagem deleta a imgmap7.jpeg do seu projeto só

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -53,7 +53,7 @@
         android:background="@drawable/input"
         android:ellipsize="middle"
         android:ems="10"
-        android:hint="Nome de usuario"
+        android:hint="Email"
         android:inputType="text"
         android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
