--- a/app/src/main/res/drawable/fasescir.xml
+++ b/app/src/main/res/drawable/fasescir.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape android:shape="oval" xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/roxo"></solid>
-    <stroke android:color="#000" android:width="1dp"/>
+    <solid android:color="@color/azulescuro"></solid>
+    <stroke android:color="#000" android:width="7dp"/>
 </shape>
